--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -111,10 +111,10 @@
             android:drawablePadding="8dp"
             android:drawableEnd="@drawable/ic_date_range_black_24dp"
             android:drawableTint="@color/colorAccent"
-            android:focusable="false"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:focusable="false" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -138,10 +138,10 @@
             android:drawablePadding="8dp"
             android:drawableEnd="@drawable/ic_access_time_black_24dp"
             android:drawableTint="@color/colorAccent"
-            android:focusable="false"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:focusable="false" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
