--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTodo"
+        tools:listitem="@layout/item_view"
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
