--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -46,6 +46,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/etTitle"
             android:hint="Enter Task title"
             android:paddingStart="8dp"
             android:inputType="textCapWords"
@@ -76,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your Task"
+            android:id="@+id/etDesc"
             android:lines="3"
             android:gravity="start"
             android:paddingStart="8dp"
@@ -172,13 +174,15 @@
     <com.google.android.material.button.MaterialButton
         android:text="Save Task"
         android:id="@+id/saveBtn"
+        android:clickable="true"
         app:backgroundTint="@color/colorAccent"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_gravity="end"
         app:cornerRadius="25dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:focusable="true" />
 
 
 </LinearLayout>
